tests/invalid/type/module_import_path_bad_ext.pts
import "./modules/Stack.txt";

function main() : void {
}
